# azure-intro-tensorflow

./: 1_text_as_tensors.ipynb  2_words_embeddings.ipynb  3_patterns_rnns.ipynb  4_gen_text_with_rnns.ipynb  README.md  pyproject.toml
